# sample_math_project

./: .gitignore  CMakeLists.txt  Dockerfile  README.MD  main.cpp
.cache/clangd/index/: adder.cpp.53D0547D1852FA31.idx  adder.h.0F3DB6F32CD89EDF.idx  gmock-actions.h.245C55BCA2C00897.idx  gmock-all.cc.0EED61D0320398EF.idx  gmock-cardinalities.cc.08E4FA80A4942A5B.idx  gmock-cardinalities.h.BAC23E8A4456A0C2.idx  gmock-function-mocker.h.DE990CF0D1A2367A.idx  gmock-generated-actions.h.1458FC477D601CE7.idx  gmock-internal-utils.cc.04047A6ED6C5B100.idx  gmock-internal-utils.h.144B370FA0B53191.idx  gmock-matchers.cc.86992AA590494330.idx  gmock-matchers.h.27C7EB2A14A1E448.idx  gmock-matchers.h.ACCD9BE5973C8E07.idx  gmock-more-actions.h.197E6E2954C85177.idx  gmock-more-matchers.h.5BC8B2AAAC060A98.idx  gmock-nice-strict.h.C5669B0FA7872EFB.idx  gmock-port.h.3C767659F8AF9C71.idx  gmock-port.h.918556B5F0C38726.idx  gmock-pp.h.0831805DF13CB95C.idx  gmock-spec-builders.cc.CB3E00BA3D4FF3D0.idx  gmock-spec-builders.h.B0362D5EC2179EBB.idx  gmock.cc.DD9713F44EA583E0.idx  gmock.h.8450B7AD278A51F4.idx  gmock_main.cc.51FAFE5613BE50A7.idx  gtest-all.cc.0A91B42A223A80DB.idx  gtest-assertion-result.cc.55D46A44C93EB28C.idx  gtest-assertion-result.h.DABDE86FAE86FDC6.idx  gtest-death-test-internal.h.4582E2F16EEB2A3F.idx  gtest-death-test.cc.7385A3F89A5D3CDB.idx  gtest-death-test.h.943DC7D0602A7073.idx  gtest-filepath.cc.8C4D17CCDD8C9196.idx  gtest-filepath.h.806089FDA6B3BCCD.idx  gtest-internal-inl.h.37B201FD090C2F1B.idx  (+28 more)
Adder/: CMakeLists.txt
Adder/src/: adder.cpp  functions.cpp
Adder/test/: CMakeLists.txt  gtest_adder.cpp  gtest_functions.cpp
Multiplier/: CMakeLists.txt
Multiplier/src/: functions.cpp  multiplier.cpp
Multiplier/test/: CMakeLists.txt  gtest_functions.cpp  gtest_multiplier.cpp
(+2 files in other folders)
